--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css">
     <title>New York Times Replica</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <nav></nav>
+        <nav>
+        </nav>
     </header>
+
     <main>
-      <section id="photo"></section>
-      <article></article>
-      <aside></aside>
-      <section id="alternative">
-        <div id="thumbnails"></div>
+        <section id="photo"></section>
+        <article></article>
         <aside></aside>
-      </section>
+        <section id="alternative">
+            <div id="thumbnails"></div>
+            <aside></aside>
+        </section>
     </main>
-    <footer></footer>
-  </body>
+
+    <footer>
+        <div id="foot_title">
+            <img src="nyt.jpg" alt="NYT" />
+            <div class="go2home"> <a href="#">Go to Home Page »  </a></div>
+        </div>
+        <div id="bottom_menu">
+            <ul>
+                <li>NEWS</li>
+                <li>OPINION</li>
+                <li>ARTS</li>
+                <li>LIVING</li>
+                <li>LISTING & MORE</li>
+            </ul>
+        </div>
+
+        <div id="blurred_row">
+            <ul>
+                <li><a href="#"> © 2019 The New York Times Company</a></li>
+                <li><a href="#"> Contact Us</a></li>
+                <li><a href="#"> Work with us</a></li>
+                <li><a href="#"> Advertise</a></li>
+                <li><a href="#"> Your Ad Choices</a></li>
+                <li><a href="#"> Privacy</a></li>
+                <li><a href="#"> Terms of Service</a></li>
+                <li><a href="#"> Terms of Sale</a></li>
+                <li><a href="#"> Site Map</a></li>
+                <li><a href="#"> Help</a></li>
+                <li><a href="#"> Subscriptions</a></li>
+            </ul>
+        </div>
+        <div id="last_line"></div>
+    </footer>
+</body>
+
 </html>
