added FOOTER section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>New York Times Replica</title>
 </head>
 
@@ -27,7 +27,7 @@
 
     <footer>
         <div id="foot_title">
-            <img src="nyt.jpg" alt="NYT" />
+            <img src="assets/images/nyt.jpg" alt="NYT" />
             <div class="go2home"> <a href="#">Go to Home Page »  </a></div>
         </div>
         <div id="bottom_menu">
@@ -55,7 +55,11 @@
                 <li><a href="#"> Subscriptions</a></li>
             </ul>
         </div>
-        <div id="last_line"></div>
+        <hr>
+        <div id="last_line">
+            <div class="bottom_txt"> <strong>Just $1 a week, plus cooking and Crossword on us . </strong> <span class="lite_weight">Ends soon</span></div>
+            <div class="subscribe_bottom">subscribe now <img src="assets/images/svg_arrow.jpg" alt="" /></div>
+        </div>
     </footer>
 </body>
 
