--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>New York Times Replica</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header>
       <nav>
@@ -28,9 +27,9 @@
               ></path>
             </svg>
           </button>
-          <a href="https://www.nytimes.com/section/science/space"
-            >space & cosmos</a
-          >
+          <a href="https://www.nytimes.com/section/science/space">
+            space & cosmos
+          </a>
         </div>
         <div id="logo">
           <svg viewBox="0 0 184 25" fill="#000">
@@ -45,87 +44,54 @@
         </div>
       </nav>
     </header>
-
     <main>
-      <section id="subscribe">
-        <div>
-          <img
-            width="140px"
-            height="20px"
-            src="https://mwcm.nyt.com/dam/mkt_assets/crs/banners/WF-259599/flex/images/wordmark-Master-large-optimised.svg"
-          />
-        </div>
-        <div class="second">
-          <p>
-            Holding the powerful to <br />
-            account takes fearlessness.
-          </p>
-          <p>
-            Tenacity.
-          </p>
-          <p class="title3" id="t3" style="opacity: 1;">
-            And you.
-          </p>
-        </div>
-        <div class="third">
-          <p>
-            <span
-              >Just $1 a week,<br />
-              plus Cooking and <br />
-              Crossword on us.</span
-            ><br />
-            Ends soon.
-          </p>
-        </div>
-        <div class="cta">Subscribe now</div>
+      <section id="photo">
+        <h1 class="title">
+          Space Ripples Reveal Big Bang’s Smoking Gun
+          <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp" alt="">
+        </h1>
       </section>
-      <section id="photo"></section>
       <article></article>
       <aside></aside>
       <section id="alternative">
-        <div id="thumbnails"></div>
-        <aside></aside>
-
-        <section id="alternative">
-            <div id="thumbnails">
-                jjjj
+        <div id="thumbnails">
+            jjjj
+        </div>
+        <aside>
+            <h4>Most Popular</h4>
+            <div class="side_headings">
+                <a href="#"> Michael Cohen Plans to Call Trump a ‘Con Man’ and a ‘Cheat’ in Congressional Testimony</a>
             </div>
-            <aside>
-                <h4>Most Popular</h4>
-                <div class="side_headings">
-                    <a href="#"> Michael Cohen Plans to Call Trump a ‘Con Man’ and a ‘Cheat’ in Congressional Testimony</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> On Eve of Michael Cohen’s Testimony, Republican Threatens to Reveal Compromising Information</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> Pakistani Military Says It Shot Down 2 Indian Warplanes, Capturing Pilots</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> This Stock Market Rally Has Everything, Except Investors</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> Indian Jets Strike in Pakistan in Revenge for Kashmir Attack</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> House Votes to Block Trump’s National Emergency Declaration About the Border</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> G.O.P. Tries to Hold Down Defections Before Vote to Block Trump’s Emergency</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> Opinion: Trump Is Epic</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> Inside the Secret Sting Operations to Expose Celebrity Psychics</a>
-                </div>
-                <div class="side_headings">
-                    <a href="#"> How to Stay Fresh on Long Trips</a>
-                </div>
-            </aside>
-
-        </section>
-        <hr>
+            <div class="side_headings">
+                <a href="#"> On Eve of Michael Cohen’s Testimony, Republican Threatens to Reveal Compromising Information</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> Pakistani Military Says It Shot Down 2 Indian Warplanes, Capturing Pilots</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> This Stock Market Rally Has Everything, Except Investors</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> Indian Jets Strike in Pakistan in Revenge for Kashmir Attack</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> House Votes to Block Trump’s National Emergency Declaration About the Border</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> G.O.P. Tries to Hold Down Defections Before Vote to Block Trump’s Emergency</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> Opinion: Trump Is Epic</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> Inside the Secret Sting Operations to Expose Celebrity Psychics</a>
+            </div>
+            <div class="side_headings">
+                <a href="#"> How to Stay Fresh on Long Trips</a>
+            </div>
+        </aside>
+      </section>
+      <hr>
     </main>
     <footer>
       <div id="foot_title">
