innitial view first row THUMBNAIL portion

--- a/index.html
+++ b/index.html
@@ -81,7 +81,26 @@
 
         <section id="alternative">
             <div id="thumbnails">
-                jjjj
+                <div class="thumbnails_row">
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb1.png" alt=""> <br>
+                        <span class="img_caption"> Terry Renna/Association Press</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb1.png" alt=""> <br>
+                        <span class="img_caption"> Terry Renna/Association Press</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb1.png" alt=""> <br>
+                        <span class="img_caption"> Terry Renna/Association Press</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>f
+                    </div>
+                </div>
             </div>
             <aside>
                 <h4>Most Popular</h4>
