THUMBNAIL Portion finishes 85%

--- a/index.html
+++ b/index.html
@@ -89,18 +89,61 @@
                         <span class="img_date"> Feb. 21</span>
                     </div>
                     <div class="thumbnail_block">
+                        <img src="assets/images/thumb3.png" alt=""> <br>
+                        <span class="img_caption"> NASA ESA, A. Simon, M Wong and A  that the pixels:Heu</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb2.png" alt=""> <br>
+                        <span class="img_caption"> Image by Doug/The New York Times</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                </div> <br/>
+
+                <div class="thumbnails_row">
+                    <div class="thumbnail_block">
                         <img src="assets/images/thumb1.png" alt=""> <br>
                         <span class="img_caption"> Terry Renna/Association Press</span><br/>
                         <h3> How Israel's Moon Lander Got to the Launchpad</h3>
                         <span class="img_date"> Feb. 21</span>
                     </div>
                     <div class="thumbnail_block">
+                        <img src="assets/images/thumb3.png" alt=""> <br>
+                        <span class="img_caption"> NASA ESA, A. Simon, M Wong and A Heu</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb2.png" alt=""> <br>
+                        <span class="img_caption"> Image by Doug/The New York Times</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                </div><br/>
+
+                <div class="thumbnails_row">
+                    <div class="thumbnail_block">
                         <img src="assets/images/thumb1.png" alt=""> <br>
                         <span class="img_caption"> Terry Renna/Association Press</span><br/>
                         <h3> How Israel's Moon Lander Got to the Launchpad</h3>
-                        <span class="img_date"> Feb. 21</span>f
+                        <span class="img_date"> Feb. 21</span>
                     </div>
-                </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb3.png" alt=""> <br>
+                        <span class="img_caption"> NASA ESA, A. Simon, M Wong and A Heu</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                    <div class="thumbnail_block">
+                        <img src="assets/images/thumb2.png" alt=""> <br>
+                        <span class="img_caption"> Image by Doug/The New York Times</span><br/>
+                        <h3> How Israel's Moon Lander Got to the Launchpad</h3>
+                        <span class="img_date"> Feb. 21</span>
+                    </div>
+                </div><br/>
+
             </div>
             <aside>
                 <h4>Most Popular</h4>
