Completing the Footer + Alternate segments

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
         <section id="alternative">
             <div id="thumbnails">
+                <span class="thumbnails_sub_title"> <a href="#"> More in Space & Cosmos </a></span>
                 <div class="thumbnails_row">
                     <div class="thumbnail_block">
                         <img src="assets/images/thumb1.png" alt=""> <br>
@@ -123,6 +124,7 @@
                     </div>
                 </div><br/>
 
+                <span class="thumbnails_sub_title" style="width:100%;border-top: 1px solid black;"> <a href="#"> More in Space & Cosmos </a></span>
                 <div class="thumbnails_row">
                     <div class="thumbnail_block">
                         <img src="assets/images/thumb1.png" alt=""> <br>
@@ -180,8 +182,10 @@
             </aside>
 
         </section>
-        <hr>
+
     </main>
+
+    <span class="bottom_line_divisor"> </span>
     <footer>
         <div id="foot_title">
             <img src="assets/images/nyt.jpg" alt="NYT" />
