added css property to clear thubnail floating effect upon browser resize

--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@
                         <h3> How Israel's Moon Lander Got to the Launchpad</h3>
                         <span class="img_date"> Feb. 21</span>
                     </div>
-                </div> <br/>
+                </div>
+                <div class="after-box"></div>
+
 
                 <div class="thumbnails_row">
                     <div class="thumbnail_block">
@@ -386,7 +388,8 @@
                         <h3> How Israel's Moon Lander Got to the Launchpad</h3>
                         <span class="img_date"> Feb. 21</span>
                     </div>
-                </div><br/>
+                </div>
+                <div class="after-box"></div>
 
                 <span class="thumbnails_sub_title" style="width:100%;border-top: 1px solid black;"> <a href="#"> More in Space & Cosmos </a></span>
                 <div class="thumbnails_row">
@@ -408,7 +411,8 @@
                         <h3> How Israel's Moon Lander Got to the Launchpad</h3>
                         <span class="img_date"> Feb. 21</span>
                     </div>
-                </div><br/>
+                </div>
+                <div class="after-box"></div>
 
             </div>
             <aside>
