--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                     aria-label="Share on Facebook"
                   >
                     <svg
-                      class="css-4brsb6"
                       viewBox="0 0 7 15"
                       width="7"
                       height="15"
@@ -108,7 +107,6 @@
                   >
                     <svg
                       viewBox="0 0 13 10"
-                      class="css-4brsb6"
                       width="13"
                       height="10"
                     >
@@ -129,7 +127,6 @@
                     aria-label="Email"
                     ><svg
                       viewBox="0 0 15 9"
-                      class="css-4brsb6"
                       width="15"
                       height="9"
                     >
@@ -670,7 +667,6 @@
                     aria-label="Share on Facebook"
                   >
                     <svg
-                      class="css-4brsb6"
                       viewBox="0 0 7 15"
                       width="7"
                       height="15"
@@ -693,7 +689,6 @@
                   >
                     <svg
                       viewBox="0 0 13 10"
-                      class="css-4brsb6"
                       width="13"
                       height="10"
                     >
@@ -714,7 +709,6 @@
                     aria-label="Email"
                     ><svg
                       viewBox="0 0 15 9"
-                      class="css-4brsb6"
                       width="15"
                       height="9"
                     >
@@ -751,158 +745,158 @@
       </article>
       <section id="alternative">
         <div id="thumbnails">
-          <span class="thumbnails_sub_title">
+          <span class="thumbnails-sub-title">
             <a href="#"> More in Space & Cosmos </a></span
           >
-          <div class="thumbnails_row">
-            <div class="thumbnail_block">
+          <div class="thumbnails-row">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb1.png" alt="" /> <br />
-              <span class="img_caption"> Terry Renna/Association Press</span
+              <span class="img-caption"> Terry Renna/Association Press</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb3.png" alt="" /> <br />
-              <span class="img_caption">
+              <span class="img-caption">
                 NASA ESA, A. Simon, M Wong and A that the pixels:Heu</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb2.png" alt="" /> <br />
-              <span class="img_caption"> Image by Doug/The New York Times</span
+              <span class="img-caption"> Image by Doug/The New York Times</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
           </div>
           <div class="after-box"></div>
 
-          <div class="thumbnails_row">
-            <div class="thumbnail_block">
+          <div class="thumbnails-row">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb1.png" alt="" /> <br />
-              <span class="img_caption"> Terry Renna/Association Press</span
+              <span class="img-caption"> Terry Renna/Association Press</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb3.png" alt="" /> <br />
-              <span class="img_caption">
+              <span class="img-caption">
                 NASA ESA, A. Simon, M Wong and A Heu</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb2.png" alt="" /> <br />
-              <span class="img_caption"> Image by Doug/The New York Times</span
+              <span class="img-caption"> Image by Doug/The New York Times</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
           </div>
           <div class="after-box"></div>
 
           <span
-            class="thumbnails_sub_title"
+            class="thumbnails-sub-title"
             style="width:100%;border-top: 1px solid black;"
           >
             <a href="#"> More in Space & Cosmos </a></span
           >
-          <div class="thumbnails_row">
-            <div class="thumbnail_block">
+          <div class="thumbnails-row">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb1.png" alt="" /> <br />
-              <span class="img_caption"> Terry Renna/Association Press</span
+              <span class="img-caption"> Terry Renna/Association Press</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb3.png" alt="" /> <br />
-              <span class="img_caption">
+              <span class="img-caption">
                 NASA ESA, A. Simon, M Wong and A Heu</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
-            <div class="thumbnail_block">
+            <div class="thumbnail-block">
               <img src="assets/images/thumb2.png" alt="" /> <br />
-              <span class="img_caption"> Image by Doug/The New York Times</span
+              <span class="img-caption"> Image by Doug/The New York Times</span
               ><br />
               <h3>How Israel's Moon Lander Got to the Launchpad</h3>
-              <span class="img_date"> Feb. 21</span>
+              <span class="img-date"> Feb. 21</span>
             </div>
           </div>
           <div class="after-box"></div>
         </div>
         <aside>
           <h4>Most Popular</h4>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               Michael Cohen Plans to Call Trump a ‘Con Man’ and a ‘Cheat’ in
               Congressional Testimony</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               On Eve of Michael Cohen’s Testimony, Republican Threatens to
               Reveal Compromising Information</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               Pakistani Military Says It Shot Down 2 Indian Warplanes, Capturing
               Pilots</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               This Stock Market Rally Has Everything, Except Investors</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               Indian Jets Strike in Pakistan in Revenge for Kashmir Attack</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               House Votes to Block Trump’s National Emergency Declaration About
               the Border</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               G.O.P. Tries to Hold Down Defections Before Vote to Block Trump’s
               Emergency</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#"> Opinion: Trump Is Epic</a>
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#">
               Inside the Secret Sting Operations to Expose Celebrity Psychics</a
             >
           </div>
-          <div class="side_headings">
+          <div class="side-headings">
             <a href="#"> How to Stay Fresh on Long Trips</a>
           </div>
         </aside>
       </section>
       <hr />
     </main>
-    <span class="bottom_line_divisor"> </span>
+    <span class="bottom-line-divisor"></span>
 
     <footer>
-      <div id="foot_title">
+      <div id="foot-title">
         <img src="assets/images/nyt.jpg" alt="NYT" />
         <div class="go2home"><a href="#">Go to Home Page » </a></div>
       </div>
-      <div id="bottom_menu">
+      <div id="bottom-menu">
         <ul>
           <li>NEWS</li>
           <li>OPINION</li>
@@ -912,7 +906,7 @@
         </ul>
       </div>
 
-      <div id="blurred_row">
+      <div id="blurred-row">
         <ul>
           <li><a href="#"> © 2019 The New York Times Company</a></li>
           <li><a href="#"> Contact Us</a></li>
@@ -928,12 +922,12 @@
         </ul>
       </div>
       <hr />
-      <div id="last_line">
-        <div class="bottom_txt">
+      <div id="last-line">
+        <div class="bottom-txt">
           <strong>Just $1 a week, plus cooking and Crossword on us . </strong>
-          <span class="lite_weight">Ends soon</span>
+          <span class="lite-weight">Ends soon</span>
         </div>
-        <div class="subscribe_bottom">
+        <div class="subscribe-bottom">
           subscribe now <img src="assets/images/svg_arrow.jpg" alt="" />
         </div>
       </div>
