Preparing for pull request

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
               >
                 <div>
                   <img
+                    alt="map square"
                     src="https://static01.nyt.com/images/2018/06/11/climate/11cli-kochtransit-print-jp-2/00CLI-KOCHTRANSIT-map-square640.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
                   />
                 </div>
@@ -269,6 +270,7 @@
               >
                 <div>
                   <img
+                    alt="merlin"
                     src="https://static01.nyt.com/images/2018/07/06/upshot/06up-fertility4/merlin_140747337_41a94541-7d27-40d2-8ed3-95d30ac8b59f-square640.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
                   />
                 </div>
@@ -283,6 +285,7 @@
               >
                 <div>
                   <img
+                    alt="lohan square"
                     src="https://static01.nyt.com/images/2018/06/28/fashion/26LOHAN/26LOHAN-square640-v5.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
                   />
                 </div>
